# Credha

./: credit_intel.db
credit_intel/: README.md  docker-compose.yml  pyproject.toml
credit_intel/api/: main.py
credit_intel/credit_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
credit_intel/dashboard/: app.py
credit_intel/db/: database.py  models.py
credit_intel/docker/: backend.Dockerfile  dashboard.Dockerfile
credit_intel/features/: compute.py
credit_intel/ingestion/: structured.py  unstructured.py
credit_intel/model/: persistence.py  score.py  train.py
credit_intel/scheduler/: refresh.py
credit_intel/utils/: config.py  logging.py
