[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-intel"
version = "0.1.0"
description = "Real-Time Explainable Credit Intelligence Platform"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "yfinance>=0.2.40",
    "requests>=2.32",
    "feedparser>=6.0",
    "vaderSentiment>=3.3.2",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
    "tenacity>=8.3",
    "orjson>=3.10",
    "plotly>=5.23",
    "streamlit>=1.37"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["credit_intel*"]
